<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/back_button_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/name_soccer_player_detail"
            app:layout_constraintTop_toTopOf="@+id/name_soccer_player_detail" />

        <ImageButton
            android:id="@+id/favorite_soccer_player_detail"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/favorite_button_desc"
            android:src="@drawable/baseline_favorite_border_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="@+id/name_soccer_player_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name_soccer_player_detail" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_soccer_player_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/name_players_soccer"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_soccer_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/name_team"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="@+id/photo_soccer_player_detail"
            app:layout_constraintTop_toBottomOf="@+id/photo_soccer_player_detail" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_soccer_players_club_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_soccer_club"
            app:layout_constraintStart_toEndOf="@+id/tv_soccer_club"
            app:layout_constraintTop_toTopOf="@+id/tv_soccer_club" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rate_soccer_player_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_player"
            app:layout_constraintEnd_toEndOf="@+id/star_icon_player"
            app:layout_constraintStart_toStartOf="@+id/star_icon_player"
            app:layout_constraintTop_toTopOf="@+id/star_icon_player" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo_soccer_player_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/kevindebruyne"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="@+id/favorite_soccer_player_detail"
            app:layout_constraintStart_toStartOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/name_soccer_player_detail" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/star_icon_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/baseline_star_24"
            app:layout_constraintEnd_toEndOf="@+id/photo_soccer_player_detail"
            app:layout_constraintTop_toTopOf="@+id/photo_soccer_player_detail" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_soccer_player_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/detail_player_position"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="@+id/tv_soccer_club"
            app:layout_constraintTop_toBottomOf="@+id/tv_soccer_club" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_soccer_players_position_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toEndOf="@+id/tv_soccer_player_position"
            app:layout_constraintTop_toBottomOf="@+id/tv_soccer_club" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_players_assist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/player_assist"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="@+id/tv_players_goals"
            app:layout_constraintTop_toBottomOf="@+id/tv_players_goals" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_soccer_players_total_assist_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toEndOf="@+id/tv_players_assist"
            app:layout_constraintTop_toBottomOf="@+id/tv_players_goals" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_players_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/players_goals"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="@+id/tv_soccer_player_position"
            app:layout_constraintTop_toBottomOf="@+id/tv_soccer_player_position" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_soccer_players_total_goals_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toEndOf="@+id/tv_players_goals"
            app:layout_constraintTop_toBottomOf="@+id/tv_soccer_player_position"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_soccer_active_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/players_active"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="@+id/tv_players_assist"
            app:layout_constraintTop_toBottomOf="@+id/tv_players_assist" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_soccer_active_player_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toEndOf="@+id/tv_soccer_active_player"
            app:layout_constraintTop_toBottomOf="@+id/tv_players_assist" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_soccer_player_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/detail_description"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="@+id/tv_soccer_active_player"
            app:layout_constraintTop_toBottomOf="@+id/tv_soccer_active_player" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_soccer_players_description_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="31dp"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/photo_soccer_player_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_soccer_player_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_soccer_player_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>